syntax = "proto3";

package protos;

option go_package = "github.com/streamdal/snitch-protos/build/go/protos";

// Common response message for many gRPC methods
message StandardResponse {
  // Co-relation ID for the request / response
  string id = 1;
  ResponseCode code = 2;
  string message = 3;
}

// Common status codes used in gRPC method responses
enum ResponseCode {
  RESPONSE_CODE_UNSET= 0;
  RESPONSE_CODE_OK = 1;
  RESPONSE_CODE_BAD_REQUEST = 2;
  RESPONSE_CODE_NOT_FOUND = 3;
  RESPONSE_CODE_INTERNAL_SERVER_ERROR = 4;
  RESPONSE_CODE_GENERIC_ERROR = 5;
}

// Each SDK client is a $service + $component + $operation_type
enum OperationType {
  OPERATION_TYPE_UNSET = 0;
  OPERATION_TYPE_CONSUMER = 1;
  OPERATION_TYPE_PRODUCER = 2;
}

// Used to indicate who a command is intended for
message Audience {
  // Name of the service -- let's include the service name on all calls, we can
  // optimize later ~DS
  string service_name = 1;

  // Name of the component the SDK is interacting with (ie. kafka-$topic-name)
  string component_name = 2;

  // Consumer or Producer
  OperationType operation_type = 3;

  // Name for the consumer or producer
  string operation_name = 4;
}

message Metric {
  string name = 1;
  map<string, string> labels = 2;
  double value = 3;
}

message TailRequest {
  Audience audience = 1;
  string pipeline_id = 2;
}

enum TailResponseType {
  TAIL_RESPONSE_TYPE_UNSET = 0;
  TAIL_RESPONSE_TYPE_PAYLOAD = 1;
  TAIL_RESPONSE_TYPE_ERROR = 2;
}

// TailResponse originates in the SDK and then is sent to snitch servers where
// it is forwarded to the correct frontend streaming gRPC connection
message TailResponse {
  TailResponseType type = 1;

  Audience audience = 2;

  string pipeline_id = 3;

  // Timestamp in nanoseconds
  int64 timestamp_ns = 4;

  // Payload data. For errors, this will be the error message
  // For payloads, this will be JSON of the payload data, post processing
  bytes data = 5;
}

message TailCommand {
  TailRequest request = 1;
}